# sport-school

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  alembic.ini
backend/: pyproject.toml
backend/app/: __init__.py  main.py  seed.py  seed_plataforma.py
backend/app/adapters/: __init__.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  db.py  org_context.py  phone.py  security.py  tenant.py
backend/app/domain/: __init__.py
backend/app/models/: __init__.py  alumno.py  alumno_tutor.py  asistencia.py  aviso.py  aviso_notificacion.py  base.py  categoria.py  comprobante_pendiente.py  conciliacion_pendiente.py  consentimiento.py  credito.py  cuota.py  deportista.py  deportista_tutor.py  disciplina.py  egreso.py  entrenador.py  entrenador_disciplina.py  entrenador_sucursal.py  horario_clase.py  inscripcion.py  organizacion.py  pago.py  pago_cuota.py  plataforma_admin.py  plataforma_auditoria.py  qr_cobro.py  recibo_contador.py  recordatorio_deudores.py  recordatorio_pago.py  sesion.py  solicitud_registro.py  sucursal.py  tutor.py  usuario.py  whatsapp_sesion.py
backend/app/schemas/: __init__.py  alumno.py  asistencia.py  auth.py  aviso.py  catalogo.py  cobranza.py  common.py  comprobantes.py  deportista.py  disciplina.py  egreso.py  entrenador.py  horarios.py  organizacion.py  plataforma.py  qr_cobro.py  registro.py  reportes.py  whatsapp_sesion.py
backend/app/services/: __init__.py  alumno.py  asistencia.py  aviso.py  aviso_notificacion.py  comprobante_whatsapp.py  comprobantes.py  deportista.py  deps.py  disciplina.py  egreso.py  entrenador.py  generacion.py  horarios.py  imagen_token.py  ocr.py  pagos.py  plataforma.py  recibo_envio.py  recibo_token.py  (+4 more)
backend/tests/: conftest.py  test_abonos.py  test_alta_retroactiva.py  test_alumnos_api.py  test_anular_pago.py  test_asistencia.py  test_auto_registro.py  test_aviso_notificacion.py  test_avisos.py  test_comprobantes.py  test_conciliacion.py  test_config.py  test_cuota_engine.py  test_cuotas_adelantadas.py  test_deportistas_api.py  test_disciplina_scoping.py  test_disciplinas.py  test_egresos.py  test_entrenadores.py  test_generacion_historica.py  test_horarios.py  test_identidad_ci.py  test_mi_escuela.py  test_ocr_comprobante.py  test_pagos_idempotencia.py  test_panel_finanzas.py  test_phone.py  test_plataforma.py  test_recibo.py  test_recordatorio_deudores.py  test_recordatorios.py  test_reportes.py  test_rls_isolation.py  test_sucursales_recibo.py  test_whatsapp_gateway.py  test_whatsapp_inbound_webhook.py  test_whatsapp_meta.py  test_whatsapp_sesion_api.py
(+272 files in other folders)
