[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "LatinoSport backend (FastAPI + SQLAlchemy 2.0 + PostgreSQL/RLS)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.1",
    "bcrypt>=4.1",
    "PyJWT>=2.8",
    "celery>=5.3",
    "redis>=5.0",
    "python-dateutil>=2.9",
    "fpdf2>=2.7",
    "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.9",
    "import-linter>=2.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["B008"]  # FastAPI usa llamadas en defaults (Depends, Query) intencionalmente

[tool.ruff.lint.per-file-ignores]
"app/models/__init__.py" = ["F401"]  # re-exporta modelos para poblar Base.metadata

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["celery.*", "jwt.*", "dateutil.*", "fpdf.*", "qrcode.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# import-linter  (núcleo de dominio aislado de adaptadores / framework)
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "app"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "El dominio no depende de adaptadores, api ni del framework"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = [
    "app.adapters",
    "app.api",
    "fastapi",
    "sqlalchemy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "db: tests que requieren una base de datos PostgreSQL alcanzable",
]
